# rpong

./: .gitignore  Cargo.toml  README.md  build.sh  install_deps.sh
server/: handlers.go  main.go  renderer.go  serve.go
server/www/html/: index.html
server/www/static/css/: style.css
server/www/static/js/: rpong.js  rpong_old.js
src/: html_obj.rs  lib.rs  renderer.rs
src/web/: canvas.rs  dom.rs  mod.rs
