[package]
name = "rpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

# Create as dynamic library.
[lib]
crate-type =["cdylib"]
