[package]
name = "rpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'CssStyleDeclaration',
  'HtmlBodyElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'console',
]

# Create as dynamic library.
[lib]
crate-type =["cdylib"]
